--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <p>You can find me on:</p>
 
         <ul>
-          <li>Email ID</li>
-          <li>Facebook ID</li>
-          <li>Cellphone</li>
+          <li>bonznia@yahoo.com</li>
+          <li>borge tanierla</li>
+          <li>+639171383195</li>
         </ul>
       </div>
       
